--- a/css/app.css
+++ b/css/app.css
@@ -1,350 +1,410 @@
 @charset "utf-8";
 
-/* Small screens (default) */
-html {
-	font-size: 100%;
+/* general */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  color: #333;
+  /* background-color: #e4ffc9; */
+  background-color: #c7cbbd;
+  font-family: Verdana, Arial;
+  font-size: 0.8rem;
+}
+body {
+  position: relative;
+  overflow-x: hidden;
 }
 
-/* Medium screens (640px) */
+/* small screens (default) */
+html {
+  font-size: 100%;
+}
+/* medium screens (640px) */
 @media (min-width: 40rem) {
   html {
-  	font-size: 112%;
+    font-size: 112%;
   }
 }
-
-/* Large screens (1024px) */
+/* large screens (1024px) */
 @media (min-width: 64rem) {
   html {
-  	font-size: 120%;
+    font-size: 120%;
   }
 }
 
-html {
-	margin: 0;
-	padding: 0;
-	height: 100%;
-}
 
-body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	color: #333;
-	/*background-color: #f5f5d5;*/
-	background-color: #e4ffc9;
-	font-family: Verdana, Arial;
-	font-size: 0.8rem;
-}
 
-#nav_bar {
-	width: 100%;
-	height: 50px;
-	position: fixed;
-	left: 0;
-	right: 0;
-	top: 0;
-	z-index: 10;
-	color: #fff;
-	background-color: #0593d3;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.75);
+/* wrapper */
+#wrapper {
+  padding-left: 0;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
-
-#nav_title {
-	box-sizing: border-box;
-	display: block;
-	float: left;
-	height: 49px;
-	line-height: 54px;
-	padding: 0 15px;
-	margin-top: -1px;
-	font-size: 30px;
-	font-family: 楷体;
-	color: #fff;
-	cursor: pointer;
+#wrapper.toggled {
+  padding-left: 220px;
 }
-
-#main {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	position: relative;
+#wrapper.toggled #sidebar-wrapper {
+  width: 220px;
 }
-
-#side_bar {
-	width: 270px;
-	position: fixed;
-	left: 0;
-	top: 52px;
-	bottom: 0;
-	border-right: 1px solid #ccc;
-	margin-top: 0;
-	padding-top: 0;
-	padding-bottom: 0;
-	overflow-y: auto;
-	color: #555;
-	background-color: rgba(255, 255, 255, .8);
-}
-
-#side_bar a:visited, #side_bar a:link {
-	color: #555;
-	text-decoration: none;
-}
-
-#side_bar a:hover {
-	color: #000;
-}
-
-#side_bar ul {
-	list-style-type: none;
-	margin: 0;
-	padding-top: 0;
-	padding-left: 12px;
-	padding-right: 6px;
-}
-
-#side_bar > ul {
-	padding-top: 10px;
-	padding-bottom: 20px;
-}
-
-#side_bar ol {
-	margin: 0;
-	padding-top: 0;
-	padding-left: 30px;
-	padding-right: 6px;
-}
-
-#side_bar ul li, #side_bar ol li {
-	margin: 0;
-	padding: 0;
-	padding-top: 7px;
-	padding-bottom: 6px;
-	padding-left: 4px;
-	font-size: 0.7rem;
-	cursor: default;
-	border-bottom: 1px solid #ccc;
-}
-
-#side_bar ul li:last-child, #side_bar ol li:last-child {
-	border-bottom: 0;
-}
-
-#side_bar ul li.highlight{
-	background-color: rgba(204, 204, 204, .55);
-}
-
-#content {
-	position: absolute;
-	top: 52px;
-	bottom: 0;
-	left: 270px;
-	right: 0;
-	overflow-y: auto;
-	padding: 10px 80px 150px 50px;
-	font-size: 0.8rem;
-	line-height: 1.3rem;
-}
-
-#content code {
-	font-family: Consolas,"Courier New",Courier,FreeMono,monospace;
-}
-
-#content p code,
-#content li>code,
-#content h2>code,
-#content h3>code {
-	padding-left: 3px;
-	padding-right: 3px;
-	color: #c7254e;
-	background: #f9f2f4;
-}
-
-#content img {
-	max-width: 98%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
-#content ul {
-	display: block;
-	list-style-type: none;
-	padding-left: 10px;
-}
-
-#content ol {
-	display: block;
-	list-style-position: inside;
-	padding-left: 10px;
-}
-
-#content ul li:before {
-	content: "\2726";
-	position: relative;
-	left: -5px;
-}
-
-#content ul li,
-#content ol li {
-	font-size: 0.8rem;
-}
-
-#content ul li p,
-#content ol li p {
-	display: inline-block;
-}
-
-#content a:link, #content a:visited {
-	color: #4682BE;
-	text-decoration: none;
-}
-
-#content table {
-	display: block;
-	width: 100%;
-	overflow: auto;
-	word-break: normal;
-	word-break: keep-all;
-}
-#content table th {
-	font-weight: bold;
-}
-#content table th,
-#content table td {
-	padding: 6px 13px;
-	border: 1px solid #ddd;
-}
-#content table tr {
-	background-color: #fff;
-	border-top: 1px solid #ccc;
-}
-#content table tr:nth-child(2n) {
-	background-color: #f8f8f8;
-}
-
-#back_to_top {
-	position: fixed;
-	bottom: 30px;
-	right: 30px;
-	width: 40px;
-	height: 40px;
-	line-height: 36px;
-	color: #fff;
-	background-color: #000;
-	text-align: center;
-	font-size: 26px;
-	border-radius: 5px;
-	opacity: 0.4;
-}
-
-#back_to_top:hover {
-	cursor: pointer;
-	opacity: 1;
-}
-
-/*定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸*/
-.scrollbar::-webkit-scrollbar {
-	width: 8px;
-	height: 8px;
-	border-radius: 15px;
-	background-color: #F5F5F5;
-}
-/*定义滚动条的轨道，内阴影及圆角*/
-.scrollbar::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-	border-radius: 15px;
-	background-color: #F5F5F5;
-}
-/*定义滑块，内阴影及圆角*/
-.scrollbar::-webkit-scrollbar-thumb {
-	border-radius: 15px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-	background-color: #BCBCBC;
+#wrapper.toggled #page-content-wrapper {
+  position: absolute;
+  margin-right: -220px;
 }
 
 
 
-/*
-@media (max-width: 768px) {}
-@media (min-width: 768px) and (max-width: 992px) {}
-@media (min-width: 992px) and (max-width: 1200px) {}
-@media (min-width: 1200px) {}
-*/
-@media (max-width: 991px) {
-	#nav_category {
-		box-sizing: border-box;
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 49px;
-		line-height: 52px;
-		padding: 0 20px;
-		font-size: 30px;
-		color: #fff;
-		cursor: pointer;
-	}
-	#nav_title {
-		position: absolute;
-		left: 50%;
-		margin-left: -66px;
-		padding: 0;
-		font-size: 24px;
-		line-height: 54px;
-	}
-	
-	#side_bar {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: -272px;
-		z-index: 1001;
-		width: 270px;
-		max-width: 100%;
-		color: #f5f5d5;
-		background-color: rgba(0, 0, 0, .9);
-		overflow-y: auto;
-	}
-	#side_bar ul li, #side_bar ol li {
-		padding-top: 8px;
-		padding-bottom: 7px;
-		font-size: 0.9rem;
-	}
-	#side_bar > ul > li > ul > li:first-child {
-		margin-top: 10px;
-	}
-	#side_bar a:visited, #side_bar a:link {
-		color: #f5f5d5;
-	}
-
-	#content {
-		left: 0;
-		padding: 10px 20px 150px 20px;
-	}
-	#content h1 {
-		line-height: 120%;
-	}
-
-	.scrollbar::-webkit-scrollbar {
-		display: none;
-		width: 0;
-	}
-
-	#back_to_top {
-		bottom: 20px;
-		right: 10px;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-		background-color: rgba(0, 0, 0, .75);
-	}
+/* sidebar */
+#sidebar-wrapper {
+  width: 0;
+  height: 100%;
+  left: 220px;
+  margin-left: -220px;
+  background-color: #313B45;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 1000;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+#sidebar-wrapper::-webkit-scrollbar {
+  display: none;
 }
 
-@media (min-width: 992px) {
-	#nav_category {
-		display: none;
-	}
+.sidebar-brand {
+  display: block;
+  padding: 10px 15px 10px 30px;
+  height: 65px;
+  line-height: 44px;
+  font-size: 28px;
+  font-family: 楷体;
 }
+.sidebar-brand a {
+  color: #7DBE0A;
+  text-decoration: none;
+}
+
+.sidebar-nav {
+  list-style: none;
+  position: absolute;
+  top: 66px;
+  bottom: 0px;
+  width: 220px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 120px;
+  overflow-y: auto;
+}
+.sidebar-nav::-webkit-scrollbar {
+  display: none;
+}
+
+.sidebar-nav .sub-menu {
+  position: relative;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #111;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+}
+.sidebar-nav .sub-menu a {
+  padding-left: 42px;
+}
+.sidebar-nav .sub-menu a:hover {
+  color: #7DBE0A;
+}
+.sidebar-nav .sub-menu .highlight a {
+  color: #7DBE0A;
+}
+
+.sidebar-nav li {
+  position: relative;
+  width: 100%;
+  display: inline-block;
+  line-height: 20px;
+}
+.sidebar-nav li:before {
+  position: absolute;
+  width: 3px;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #7DBE0A;
+  content: '';
+  -webkit-transition: width 0.2s ease-in;
+  transition: width 0.2s ease-in;
+  z-index: -1;
+}
+.sidebar-nav li:hover:before {
+  width: 100%;
+  -webkit-transition: width 0.2s ease-in;
+  transition: width 0.2s ease-in;
+}
+
+.nav .open > a {
+  background-color: transparent;
+}
+.nav .open > a:hover {
+  background-color: transparent;
+}
+.nav .open > a:focus {
+  background-color: transparent;
+}
+
+.sidebar-nav li a {
+  color: #ddd;
+  display: block;
+  padding: 10px 15px 10px 30px;
+  text-decoration: none;
+}
+.sidebar-nav li.open:hover before {
+  width: 100%;
+  -webkit-transition: width 0.2s ease-in;
+  transition: width 0.2s ease-in;
+}
+
+.sidebar-nav li a:hover,
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus,
+.sidebar-nav li.open a:hover,
+.sidebar-nav li.open a:active,
+.sidebar-nav li.open a:focus {
+  background-color: transparent;
+  color: #fff;
+  text-decoration: none;
+}
+
+
+
+/* page content */
+#page-content-wrapper {
+  width: 100%;
+  padding-top: 70px;
+  padding-bottom: 120px;
+}
+
+.hamburger {
+  position: fixed;
+  top: 20px;
+  width: 32px;
+  height: 32px;
+  display: block;
+  border: none;
+  margin-left: 15px;
+  background: transparent;
+  z-index: 999;
+}
+.hamburger:hover {
+  outline: none;
+}
+.hamburger:focus {
+  outline: none;
+}
+.hamburger:active {
+  outline: none;
+}
+.hamburger.is-closed:before {
+  display: block;
+  width: 100px;
+  line-height: 32px;
+  font-size: 14px;
+  text-align: center;
+  color: #fff;
+  content: '';
+  opacity: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+}
+.hamburger.is-closed:hover before {
+  display: block;
+  opacity: 1;
+  -webkit-transform: translate3d(-100px, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+}
+.hamburger.is-closed:hover .hamb-top {
+  -webkit-transition: all 0.35s ease-in-out;
+  top: 0;
+}
+.hamburger.is-closed:hover .hamb-bottom {
+  -webkit-transition: all 0.35s ease-in-out;
+  bottom: 0;
+}
+.hamburger.is-closed .hamb-top {
+  top: 5px;
+  background-color: #b7b7b7;
+  -webkit-transition: all 0.35s ease-in-out;
+}
+.hamburger.is-closed .hamb-middle {
+  top: 50%;
+  margin-top: -2px;
+  background-color: #b7b7b7;
+}
+.hamburger.is-closed .hamb-bottom {
+  bottom: 5px;
+  background-color: #b7b7b7;
+  -webkit-transition: all 0.35s ease-in-out;
+}
+.hamburger.is-closed .hamb-top,
+.hamburger.is-closed .hamb-middle,
+.hamburger.is-closed .hamb-bottom,
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-middle,
+.hamburger.is-open .hamb-bottom {
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 0;
+}
+.hamburger.is-open .hamb-top {
+  top: 50%;
+  margin-top: -2px;
+  background-color: #b7b7b7;
+  -webkit-transform: rotate(45deg);
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
+}
+.hamburger.is-open .hamb-middle {
+  display: none;
+  background-color: #b7b7b7;
+}
+.hamburger.is-open .hamb-bottom {
+  top: 50%;
+  margin-top: -2px;
+  background-color: #b7b7b7;
+  -webkit-transform: rotate(-45deg);
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
+}
+.hamburger.is-open:before {
+  width: 100px;
+  line-height: 32px;
+  display: block;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  content: '';
+  opacity: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+}
+.hamburger.is-open:hover before {
+  display: block;
+  opacity: 1;
+  -webkit-transform: translate3d(-100px, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+}
+
+#page-content {
+  font-size: 0.8rem;
+  line-height: 1.3rem;
+}
+
+#page-content h1 {
+  font-size: 24px;
+}
+#page-content h2 {
+  font-size: 20px;
+}
+#page-content h3 {
+  font-size: 18px;
+  margin-top: 40px;
+}
+#page-content h3:before {
+  content: '\27A4';
+  margin-right: 10px;
+}
+#page-content hr {
+  border-top-color: #999;
+}
+#page-content pre {
+  padding: 0;
+  font-size: 1em;
+}
+#page-content blockquote {
+  color: #777 !important;
+  font-style: normal !important;
+  border-left: 4px solid #D6DBDF;
+  font-size: 14px;
+  background: #f9f2f4;
+  margin: 8px 0;
+  padding: 8px;
+}
+#page-content code {
+  font-family: Consolas,"Courier New",Courier,FreeMono,monospace;
+}
+#page-content p code,
+#page-content li>code,
+#page-content h2>code,
+#page-content h3>code {
+  padding-left: 3px;
+  padding-right: 3px;
+  color: #c7254e;
+  background: #f9f2f4;
+}
+#page-content img {
+  max-width: 98%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#page-content ul {
+  display: block;
+  list-style-type: none;
+  padding-left: 10px;
+}
+#page-content ol {
+  display: block;
+  list-style-position: inside;
+  padding-left: 10px;
+}
+#page-content ul li:before {
+  content: "\2726";
+  position: relative;
+  left: -5px;
+}
+#page-content ul li,
+#page-content ol li {
+  font-size: 0.8rem;
+}
+#page-content ul li p,
+#page-content ol li p {
+  display: inline-block;
+}
+#page-content a:link, #page-content a:visited {
+  color: #4682BE;
+  text-decoration: none;
+}
+#page-content a:hover {
+  text-decoration: underline;
+}
+#page-content table {
+  display: block;
+  width: 100%;
+  overflow: auto;
+  word-break: normal;
+  word-break: keep-all;
+}
+#page-content table th {
+  font-weight: bold;
+}
+#page-content table th,
+#page-content table td {
+  padding: 6px 13px;
+  border: 1px solid #ddd;
+}
+#page-content table tr {
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+}
+#page-content table tr:nth-child(2n) {
+  background-color: #f8f8f8;
+}
+
+
