--- a/css/index.css
+++ b/css/index.css
@@ -5,4 +5,15 @@
  * @date 2021-08-25
  */
 
+@font-face {
+  font-family: "ft-zgljsz";
+  src: url('../assets/fonts/中国龙金石篆.ttf');
+  src: url('../assets/fonts/中国龙金石篆.woff') format("woff"),
+       url('../assets/fonts/中国龙金石篆.otf') format("opentype"),
+       url('../assets/fonts/中国龙金石篆.ttf') format("truetype"),
+       url('../assets/fonts/中国龙金石篆.svg') format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 
