--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  color: #333;
+  color: #777;
   font-family: Verdana, Arial;
   font-size: 0.8rem;
 }
@@ -53,7 +53,13 @@ html {
 }
 
 .sea-header a {
-  color: #555;
+  color: #777;
+}
+.sea-header a:link, .sea-header a:visited {
+  color: #777;
+}
+.sea-header a:hover, .sea-header a:active {
+  color: #333;
 }
 
 .sea-navbar {
@@ -103,7 +109,7 @@ html {
 }
 
 .sea-sidebar .panel-title {
-  color: #555;
+  color: #777;
 }
 
 .sea-cat-index {
@@ -111,7 +117,7 @@ html {
   top: 80px;
   width: 200px;
   z-index: 999;
-  color: #555;
+  color: #777;
 }
 
 .sea-cat-index-wrapper {
@@ -134,24 +140,24 @@ html {
   border-bottom: 1px solid #f1f2f3;
   box-sizing: border-box;
   line-height: 40px;
-  color: #333;
+  color: #777;
   text-decoration: none;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.sea-cat-index-item:visited {
+.sea-cat-index-item:link, .sea-cat-index-item:visited {
   text-decoration: none;
 }
 .sea-cat-index-item:hover, .sea-cat-index-item:active {
   color: #f44336;
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
   text-decoration: none;
 }
 
 .sea-cat-index-wrapper a.active {
   color: #f44336;
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
   text-decoration: none;
 }
 
@@ -164,7 +170,7 @@ html {
 }
 
 .sea-cat-detail .panel-title {
-  color: #555;
+  color: #777;
 }
 
 .sea-cat-detail-wrapper {
@@ -173,15 +179,16 @@ html {
 
 .sea-cat-detail-item {
   margin-top: 15px;
-  padding-left: 0px;
-  padding-right: 15px;
-  padding: 10px;
-  border: 1px solid rgba(0,0,0,.08);
+  padding: 16px 16px 6px 10px;
+  border: 1px solid rgba(0, 0, 0, .08);
   border-radius: 4px;
+  color: #777;
+  background-color: #fff;
   cursor: pointer;
 }
 .sea-cat-detail-item:hover {
-  background-color: rgba(0,0,0,.08);
+  color: #333;
+  background-color: #f5f5f5;
 }
 
 .sea-cat-detail-card {
@@ -191,16 +198,16 @@ html {
 
 .sea-cat-detail-item-link {
   margin-top: 5px;
-  color: #555;
+  color: #777;
   font-size: 16px;
   text-decoration: none;
 }
-.sea-cat-detail-item-link:visited {
-  color: #555;
+.sea-cat-detail-item-link:link, .sea-cat-detail-item-link:visited {
+  color: #777;
   text-decoration: none;
 }
 .sea-cat-detail-item-link:hover, .sea-cat-detail-item-link:active {
-  color: #333;
+  color: #f44336;
   text-decoration: none;
 }
 .sea-cat-detail-item a.pull-left {
@@ -211,7 +218,7 @@ html {
 .sea-cat-detail-item-img {
   width: 50px;
   height: 50px;
-  border: 1px solid rgba(0,0,0,.08);
+  border: 1px solid rgba(0, 0, 0, .08);
   border-radius: 50%;
 }
 
@@ -219,7 +226,7 @@ html {
   margin-bottom: 0px;
   height: 20px;
   line-height: 20px;
-  font-size: 13px;
+  font-size: 12px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -257,7 +264,7 @@ html {
 .sea-context blockquote {
   color: #777 !important;
   font-style: normal !important;
-  border-left: 4px solid #D6DBDF;
+  border-left: 4px solid #d6dbdf;
   font-size: 14px;
   background: #f9f2f4;
   margin: 8px 0;
@@ -319,7 +326,7 @@ html {
   color: #4682BE;
   text-decoration: none;
 }
-.sea-context a:hover {
+.sea-context a:hover, .sea-context a:active {
   text-decoration: underline;
 }
 
@@ -359,9 +366,12 @@ html {
   border-radius: 4px;
   text-align: center;
   font-size: 20px;
-  color: #555;
+  color: #777;
   background-color: #fff;
   cursor: pointer;
+}
+.sea-backtop:hover {
+  color: #333;
 }
 
 ::-webkit-scrollbar, body .scrollbar-track-color {
